# binance-async-api

./: Cargo.toml
src/: client.rs  config.rs  errors.rs  lib.rs  response.rs
src/old/: mod.rs  spot.rs  usd_m.rs  utils.rs
src/rest/: mod.rs  usdm.rs
src/websocket/: mod.rs  usdm.rs
src/ws_api/: mod.rs  usdm.rs
