[package]
name = "binance-async-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
futures-util = "^0.3"
hex = "^0.4"
hmac = "^0.12"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_qs = "^0.12.0"
sha2 = "^0.10"
thiserror = "^1"
tokio = { version = "^1.34.0", features = ["full"] }
tokio-tungstenite = "^0.20"
url = "^2.5.0"
