[package]
name = "binance_async_api"
version = "0.2.4"
edition = "2021"
authors = ["Stiennon Manoe <manoe.stiennon@student.unamur.be>"]
description = "Binance async connector using tokio runtime"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
futures-util = "^0.3"
hex = "^0.4"
hmac = "^0.12"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_qs = "^0.12.0"
sha2 = "^0.10"
thiserror = "^1"
tokio = { version = "^1.34.0" }
tokio-test = "0.4.4"
tokio-tungstenite = { version = "^0.20.0", features = ["native-tls"] }
url = "^2"
