[package]
name = "binance-async-api"
version = "0.2.4"
edition = "2021"
authors = ["Stiennon Manoe <manoe.stiennon@student.unamur.be>"]
description = "Binance async connector using tokio runtime"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "^0.3"
hex = "^0.4"
hmac = "^0.12"
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_qs = "^0.13.0"
sha2 = "^0.10"
thiserror = "^2"
tokio = { version = "1.41.1", features = ["rt", "macros"] }
tokio-tungstenite = { version = "^0.24.0", features = ["native-tls"] }
